2008-06-04  Jb Evain  <jbevain@novell.com>

	* InfoManager.cs: System.Xml.Core is renamed to System.Xml
	in SL 2.0b.

2008-02-10  Chris Toshok  <toshok@ximian.com>

	[ Fix a couple of bugs reported by jpobst ]
	
	* CecilMetadata.cs (CecilProperty.ctor): we can't just use the
	name - multiple "Item" properties were screwing things up.
	(CecilProperty.FormatName): format the name for display and for
	comparison against the masterinfo.  Masterinfo version is "Type
	Name [ param-types ]", and display version if "Name [
	param-types]" (including the type in the display version made it a
	little hard to actually see what the name of the property was.)
	(CecilField.GetMemberAccess): convert FamORAssem to just Family.
	(CecilMethod.GetMemberAccess): same.

	* MasterMetadata.cs (MasterProperty.ctor): we need to format the
	name based on the key, not on the name attribute alone.
	(MasterProperty.FormatName): format the name to match up with
	CecilProperty.FormatName.
	
2008-02-07  Stephane Delcroix  <sdelcroix@novell.com>

	* MainWindow.cs: move the LoadConfiguration part at the end of
	the ctor.

2008-02-01  Andrew Jorgensen  <ajorgensen@novell.com>

	* Makefile.am: gui-compare is generated by autotools

2008-01-16  Chris Toshok <toshok@ximian.com> 

	* configure: pointless update from generating makefiles...
	* Metadata.cs: assemblies are attribute containers.
	* MasterMetadata.cs: create the list of assembly attributes.
	* CecilMetadata.cs: get the list of assembly attributes.
	* CompareContext.cs: compare the attributes on reference/target assemblies.
	* Masterinfo.cs: make attributes on assemblies public.

2008-01-15  Chris Toshok <toshok@ximian.com> 

	* MainWindow.cs: add a history entry for the current CompareDefinition, if
	  the counts are different than the previous one.
	* InfoManager.cs: when doing a preset compare, set the title to be the
	  assemblyname.
	* MasterMetadata.cs: Skip over MS's CodeAnalysis attributes.